--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ hyper = { version = "0.14.27", features = ["tcp", "server"] }
 libc = "0.2.147"
 nix = { version = "0.27.1", features = ["resource", "process", "ptrace", "mman", "fs"] }
 oauth2 = "4.4.1"
+once_cell = "1.18.0"
 prost = "0.11.9"
 prost-types = "0.11.9"
 rand = "0.8.5"
