--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,13 @@ tonic-build = "0.9.2"
 [dependencies]
 anyhow = { version = "1.0.75", features = ["backtrace"] }
 async-recursion = "1.0.4"
-axum = { version = "0.6.20", features = ["tracing", "macros", "query"] }
+async-trait = "0.1.73"
+axum = { version = "0.6.20", features = ["tracing", "macros", "query", "headers"] }
 base64 = "0.21.3"
+base64ct = { version = "1.6.0", features = ["alloc", "std"] }
 chrono = { version = "0.4.26", features = ["serde"] }
 clap = { version = "4.4.1", features = ["cargo", "derive"] }
+headers = "0.3.9"
 hyper = { version = "0.14.27", features = ["tcp", "server"] }
 libc = "0.2.147"
 nix = { version = "0.27.1", features = ["resource", "process", "ptrace", "mman", "fs"] }
@@ -27,6 +30,7 @@ reqwest = { version = "0.11.20", features = ["json"] }
 secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.105"
+subtle = "2.5.0"
 thiserror = "1.0.47"
 tokio = { version = "1.32.0", features = ["full"] }
 tokio-stream = { version = "0.1.14", features = ["net"] }
