--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,12 +17,14 @@ base64 = "0.21.3"
 base64ct = { version = "1.6.0", features = ["alloc", "std"] }
 chrono = { version = "0.4.26", features = ["serde"] }
 clap = { version = "4.4.1", features = ["cargo", "derive"] }
+daemonize = "0.5.0"
 headers = "0.3.9"
 hyper = { version = "0.14.27", features = ["tcp", "server"] }
 libc = "0.2.147"
 nix = { version = "0.27.1", features = ["resource", "process", "ptrace", "mman", "fs"] }
 oauth2 = "4.4.1"
 once_cell = "1.18.0"
+process_path = "0.1.4"
 prost = "0.11.9"
 prost-types = "0.11.9"
 rand = "0.8.5"
