--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,8 @@ hyper = { version = "0.14.27", features = ["tcp", "server"] }
 libc = "0.2.147"
 nix = { version = "0.27.1", features = ["resource", "process", "ptrace", "mman", "fs"] }
 oauth2 = "4.4.1"
-once_cell = "1.18.0"
+once_cell = { version = "1.18.0", features = ["parking_lot"] }
+parking_lot = "0.12.1"
 process_path = "0.1.4"
 prost = "0.11.9"
 prost-types = "0.11.9"
