--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,14 +22,14 @@ headers = "0.4.0"
 hyper = { version = "1.1.0", features = ["http1", "server"] }
 libc = "0.2.153"
 nix = { version = "0.29.0", features = ["resource", "process", "ptrace", "mman", "fs"] }
-oauth2 = "4.4.2"
+oauth2 = "5.0.0-rc.1"
 once_cell = { version = "1.19.0", features = ["parking_lot"] }
 parking_lot = "0.12.1"
 process_path = "0.1.4"
 prost = "0.12.3"
 prost-types = "0.12.3"
 rand = "0.8.5"
-reqwest = { version = "0.11.24", features = ["json"] }
+reqwest = { version = "0.12.8", features = ["json"] }
 secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
