--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ anyhow = { version = "1.0.80", features = ["backtrace"] }
 async-recursion = "1.0.5"
 async-trait = "0.1.77"
 aws-config = { version = "1.5.8", features = ["behavior-version-latest"] }
+aws-sdk-sso = "1.46.0"
 aws-sdk-ssooidc = "1.47.0"
 axum = { version = "0.7.4", features = ["tracing", "macros", "query"] }
 base64 = "0.22.1"
