--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,11 +24,13 @@ daemonize = "0.5.0"
 headers = "0.4.0"
 hyper = { version = "1.1.0", features = ["http1", "server"] }
 hyper-util = "0.1.9"
+indoc = "2.0.5"
 libc = "0.2.153"
 nix = { version = "0.29.0", features = ["resource", "process", "ptrace", "mman", "fs"] }
 oauth2 = "5.0.0-rc.1"
 once_cell = { version = "1.19.0", features = ["parking_lot"] }
 parking_lot = "0.12.1"
+pin-project = "1.1.6"
 process_path = "0.1.4"
 prost = "0.13.3"
 prost-types = "0.13.3"
