--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ hyper = { version = "1.1.0", features = ["http1", "server"] }
 hyper-util = "0.1.10"
 indoc = "2.0.5"
 libc = "0.2.153"
-nix = { version = "0.29.0", features = ["resource", "process", "ptrace", "mman", "fs"] }
+nix = { version = "0.29.0", features = ["resource", "process", "ptrace", "mman", "fs", "signal"] }
 oauth2 = "5.0.0-rc.1"
 once_cell = { version = "1.19.0", features = ["parking_lot"] }
 parking_lot = "0.12.1"
