--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,10 +19,10 @@ aws-sdk-ssooidc = "1.48.0"
 axum = { version = "0.7.4", features = ["tracing", "macros", "query"] }
 base64 = "0.22.1"
 base64ct = { version = "1.6.0", features = ["alloc", "std"] }
+cfg-if = "1.0.0"
 chrono = { version = "0.4.34", features = ["serde"] }
 clap = { version = "4.5.1", features = ["cargo", "derive", "env"] }
 daemonize = "0.5.0"
-futures = "0.3.31"
 futures-core = "0.3.31"
 headers = "0.4.0"
 hyper = { version = "1.1.0", features = ["http1", "server"] }
@@ -55,3 +55,6 @@ tracing-appender = "0.2.3"
 tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter", "local-time", "json", "time"] }
 url = { version = "2.5.0", features = ["serde"] }
 zeroize = { version = "1.7.0", features = ["std", "aarch64", "zeroize_derive", "serde", "derive"] }
+
+[target.'cfg(any(target_os = "freebsd", target_os = "dragonfly"))'.dependencies]
+rustix = { version = "0.38.38", default-features = false, features = ["std", "process"] }
