--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,11 @@ license = "Apache-2.0"
 [build-dependencies]
 tonic-build = "0.12.3"
 
+[features]
+default = ["native-tls"]
+native-tls = ["reqwest/default-tls"]
+rustls = ["reqwest/rustls-tls-native-roots"]
+
 [dependencies]
 anyhow = { version = "1.0.91", features = ["backtrace"] }
 async-recursion = "1.0.5"
@@ -38,7 +43,7 @@ process_path = "0.1.4"
 prost = "0.13.3"
 prost-types = "0.13.3"
 rand = "0.8.5"
-reqwest = { version = "0.12.9", features = ["json"] }
+reqwest = { version = "0.12.9", default-features = false, features = ["charset", "http2", "macos-system-configuration", "json"] }
 secrecy = { version = "0.10.0", features = ["serde"] }
 serde = { version = "1.0.214", features = ["derive"] }
 serde_json = "1.0.132"
