--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,27 @@
 [package]
 name = "mairu"
 version = "0.1.0"
+authors = ["Sorah Fukumori <her@sorah.jp>"]
+description = "on-memory AWS credentials agent and executor"
+keywords = ["aws", "security", "cli"]
+categories = ["command-line-utilities", "development-tools"]
+documentation = "https://github.com/sorah/mairu"
+homepage = "https://github.com/sorah/mairu"
+repository = "https://github.com/sorah/mairu"
 edition = "2021"
 license = "Apache-2.0"
+
+[profile.deb]
+inherits = "release"
+debug = false
+
+[package.metadata.deb]
+section = "utils"
+default-features = false
+features = ["rustls"]
+assets = [
+  ["target/release/mairu", "usr/bin/", "755"],
+]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [build-dependencies]
