--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
             features: "default"
           - target: x86_64-unknown-linux-musl
             features: "rustls"
+          - target: aarch64-apple-darwin
+            os: macos-latest
     steps:
       - run: sudo apt-get install -y musl-tools
         if: "${{ contains(matrix.platform.target, '-musl') }}"
