--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,16 +43,14 @@ jobs:
         include:
           - target: x86_64-unknown-linux-musl
             os: ubuntu-latest
-            default-features: 'no-default-features'
             features: rustls
           - target: aarch64-unknown-linux-musl
             os: ubuntu-latest
-            default-features: 'no-default-features'
             features: rustls
-            #- target: aarch64-apple-darwin
-            #  os: macos-latest
-            #- target: universal-apple-darwin
-            #  os: macos-latest
+          - target: aarch64-apple-darwin
+            os: macos-latest
+          - target: universal-apple-darwin
+            os: macos-latest
     runs-on: ${{ matrix.os }}
     steps:
       - run: sudo apt-get install -y musl-tools
@@ -72,8 +70,8 @@ jobs:
           bin: mairu
           target: '${{ matrix.target }}'
           tar: unix
-          no-default-features: "${{ matrix.default-features == 'no-default-features' }}"
-          features: ${{ matrix.features || '' }}
+          no-default-features: true
+          features: ${{ matrix.features || 'default' }}
           token: ${{ secrets.GITHUB_TOKEN }}
 
   upload-debs:
