--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,8 @@ async-trait = "0.1.77"
 aws-config = { version = "1.5.9", features = ["behavior-version-latest"] }
 aws-sdk-sso = "1.47.0"
 aws-sdk-ssooidc = "1.48.0"
+aws-smithy-runtime-api = { version = "1.7.3", features = ["client"] }
+aws-smithy-types = "1.2.9"
 axum = { version = "0.7.4", features = ["tracing", "macros", "query"] }
 base64 = "0.22.1"
 base64ct = { version = "1.6.0", features = ["alloc", "std"] }
@@ -47,6 +49,7 @@ cfg-if = "1.0.0"
 chrono = { version = "0.4.34", features = ["serde"] }
 clap = { version = "4.5.1", features = ["cargo", "derive", "env"] }
 daemonize = "0.5.0"
+futures = "0.3.31"
 futures-core = "0.3.31"
 headers = "0.4.0"
 hyper = { version = "1.1.0", features = ["http1", "server"] }
