debian: postinst for setcap

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,11 @@ debug = false
 section = "utils"
 default-features = false
 features = ["rustls"]
+depends = ["libcap2-bin"] # postinst
 assets = [
   ["target/release/mairu", "usr/bin/", "755"],
 ]
+maintainer-scripts = "pkg/debian/"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [build-dependencies]
