--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ maintainer-scripts = "pkg/debian/"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [build-dependencies]
-tonic-build = "0.12.3"
+tonic-prost-build = "0.14.1"
 
 [features]
 default = ["native-tls"]
@@ -64,8 +64,8 @@ once_cell = { version = "1.21.3", features = ["parking_lot"] }
 parking_lot = "0.12.4"
 pin-project = "1.1.10"
 process_path = "0.1.4"
-prost = "0.13.4"
-prost-types = "0.13.4"
+prost = "0.14.1"
+prost-types = "0.14.1"
 rand = "0.9.2"
 reqwest = { version = "0.12.23", default-features = false, features = ["charset", "http2", "macos-system-configuration", "json"] }
 secrecy = { version = "0.10.0", features = ["serde"] }
@@ -77,7 +77,8 @@ subtle = { version = "2.5.0", features = ["core_hint_black_box"] }
 thiserror = "2"
 tokio = { version = "1.47.1", features = ["full"] }
 tokio-stream = { version = "0.1.17", features = ["net", "signal"] }
-tonic = "0.12.3"
+tonic = "0.14.1"
+tonic-prost = "0.14.1"
 tower = { version = "0.5.2", features = ["tracing"] }
 tracing = { version = "0.1.41", features = ["attributes"] }
 tracing-appender = "0.2.3"
