--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -110,7 +110,9 @@ jobs:
     # Publish to crates.io at very last step, as other upload-* can fail, but reverting a crate publish can be complicated.
     needs: [create-release, upload-binaries, upload-debs]
     runs-on: ubuntu-latest
-    environment: crates-io
+    environment:
+      name: crates-io
+      url: https://crates.io/crates/mairu
     permissions:
       contents: read
       id-token: write
