--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ async-trait = "0.1.89"
 aws-config = { version = "1.8.12", features = ["behavior-version-latest"] }
 aws-sdk-sso = "1.91.0"
 aws-sdk-ssooidc = "1.93.0"
+aws-sdk-sts = "1.91.0"
 aws-smithy-runtime-api = { version = "1.9.3", features = ["client"] }
 aws-smithy-types = "1.3.5"
 axum = { version = "0.8.7", features = ["tracing", "macros", "query"] }
